# rumpsteak

./: .gitignore  Cargo.toml  README.md  choreography.md  flake.nix
.github/workflows/: check.yml
benches/: double_buffering.rs  ring.rs  subtype.rs  three_adder.rs
caching/: Cargo.toml
caching/src/: cache.rs  client.rs  main.rs  origin.rs  proxy.rs
choreography/: Cargo.toml
choreography/benches/: choreography_bench.rs  rumpsteak_handler_bench.rs
choreography/examples/: error_demo.rs  rumpsteak_client_server.rs  rumpsteak_three_party_negotiation.rs
choreography/src/: lib.rs  mod.rs  runtime.rs
choreography/src/ast/: choreography.rs  local_type.rs  message.rs  mod.rs  protocol.rs  role.rs  validation.rs
choreography/src/compiler/: analysis.rs  choreography.pest  codegen.rs  effects_codegen.rs  mod.rs  parser.rs  projection.rs
choreography/src/effects/: algebra.rs  handler.rs  impls.rs  interpreter.rs  middleware.rs  mod.rs
choreography/src/effects/handlers/: in_memory.rs  mod.rs  recording.rs  rumpsteak.rs
choreography/tests/: effects_edge_cases.rs  integration_test.rs  parser_test.rs  projection_patterns_test.rs  proptest_analysis.rs  proptest_proj_simple.rs  rumpsteak_handler_test.rs  wasm_compat.rs  wasm_integration.rs
comparison/: README.md
comparison/double_buffering/: Cargo.toml
comparison/double_buffering/src/: rumpsteak.rs
comparison/fft/: Cargo.toml
comparison/fft/src/: rumpsteak.rs
comparison/stream/: Cargo.toml
comparison/stream/src/: rumpsteak.rs
docs/: 01_getting_started.md  02_architecture.md  03_dsl_reference.md  04_projection.md  05_effect_handlers.md  06_rumpsteak_handler.md  07_wasm_guide.md  08_examples.md  09_api_reference.md
examples/: adder.rs  alternating_bit.rs  choreography.rs  client_server_log.rs  double_buffering.rs  elevator.rs  fft.rs  macro_choreography.rs  oauth.rs  ring.rs  ring_choice.rs  three_adder.rs
examples/Running examples/3buyers/: 3buyers_expected.rs
examples/Running examples/oauth/: oauth_expected.rs
examples/Running examples/plus_or_minus/: plus_or_minus_expected.rs
examples/Running examples/ring_max/: ring_max_expected.rs
examples/Running examples/simple_adder/: simple_adder_expected.rs
examples/Running examples/simple_auth/: simple_auth_expected.rs
examples/Running examples/travel_agency/: travel_agency_expected.rs
examples/running_examples/double-buffering/: db_expected.rs
examples/wasm-ping-pong/: Cargo.toml  README.md  build.sh  index.html  test.html
examples/wasm-ping-pong/src/: lib.rs
fsm/: Cargo.toml
fsm/src/: lib.rs  local.rs  petrify.rs
fsm/src/dot/: mod.rs
fsm/src/dot/parse/: fsm.rs  mod.rs  transition.rs
fsm/src/subtype/: main.rs  matrix.rs  mod.rs  pair.rs  prefix.rs
fsm/tests/: dot_roundtrip.rs  proptest_subtype.rs
generate/: Cargo.toml
generate/src/: parser.rs
generate/templates/: protocol.rs
macros/: Cargo.toml
macros/src/: choreography.rs  lib.rs  message.rs  parse.rs  role.rs  roles.rs  session.rs
src/: channel.rs  lib.rs  serialize.rs
src/choreography/: analysis.rs  ast.rs  codegen.rs  mod.rs  parser.rs  projection.rs
tests/: effects_test.rs
